--- a/Frontend/src/app/components/user/footer/footer.component.html
+++ b/Frontend/src/app/components/user/footer/footer.component.html
@@ -7,6 +7,7 @@
         <img src="../../../../assets/icons/facebook.png">
         <img src="../../../../assets/icons/instagram.png">
         <img src="../../../../assets/icons/pinterest.png">
+        <img src="../../../../assets/icons/twitter.png">
         </div>
         
     </div>
