--- a/Frontend/src/app/components/user/homepage/homepage.component.html
+++ b/Frontend/src/app/components/user/homepage/homepage.component.html
@@ -8,10 +8,10 @@
         </div>
         <p>Where Your Curiosity Meets Solutions</p>
         <div class="searchdiv">
-            <input placeholder="Search Questions Here">
+            <input class="searchInput" placeholder="Search Questions Here">
             <img class="searchIcon" src="../../../../assets/icons/search.png">
         </div>
-       
+
     </div>
 
     <div class="ontop">
@@ -37,16 +37,19 @@
 
     <div class="question">
         <div class="votes">
-            <img class="votesIcons" src="../../../../assets/icons/thumb-up.png">
+            <img class="votesIcons" src="../../../../assets/icons/thumb-up.png" title="Upvote this Question">
             <p>50</p>
-            <img class="votesIcons" src="../../../../assets/icons/thumb-down.png">
+            <img class="votesIcons" src="../../../../assets/icons/thumb-down.png" title="Downvote this Question">
         </div>
         <div class="questionContent">
             <div class="title">
                 <h3> How Do I undo the most recent commits in git</h3>
             </div>
             <div class="description">
-                How Do I undo the most recent commits in git
+                How Do I undo the most recent commits in git.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam numquam distinctio labore voluptas
+                iure molestias cumque unde magnam voluptate est architecto quasi quo aut at, cum debitis dolores quaerat
+                asperiores!
             </div>
             <div class="viewQuestion">
                 <h5>10 answers</h5>
@@ -57,16 +60,19 @@
 
     <div class="question">
         <div class="votes">
-            <img class="votesIcons" src="../../../../assets/icons/thumb-up.png">
+            <img class="votesIcons" src="../../../../assets/icons/thumb-up.png" title="Upvote this Question">
             <p>50</p>
-            <img class="votesIcons" src="../../../../assets/icons/thumb-down.png">
+            <img class="votesIcons" src="../../../../assets/icons/thumb-down.png" title="Downvote this Question">
         </div>
         <div class="questionContent">
             <div class="title">
                 <h3> How Do I undo the most recent commits in git</h3>
             </div>
             <div class="description">
-                How Do I undo the most recent commits in git
+                How Do I undo the most recent commits in git.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus similique repellendus libero, itaque
+                mollitia, cupiditate ratione odit voluptates corporis tempora, eaque quam natus ad atque illum labore
+                nostrum nisi. Rerum.
             </div>
             <div class="viewQuestion">
                 <h5>10 answers</h5>
