--- a/Frontend/src/app/components/user/single-question/single-question.component.css
+++ b/Frontend/src/app/components/user/single-question/single-question.component.css
@@ -1,34 +1,56 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
 }
-.searchdiv {
+
+input {
+    width: 600px;
+    height: 40px;
+}
+
+.brandDiv {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 20px;
-    background-color: rgba(110, 110, 238, 255);
     color: white;
-    padding-bottom:20px;
+    background-color: rgba(110, 110, 238, 255);
+    /* padding:50px; */
+    padding-top: 30px;
+    padding-bottom: 70px;
 
-}
-input {
-    width: 600px;
 }
 
 .brand {
     margin-top: 50px;
 }
-.question{
+
+.searchIcon {
+    width: 30px;
+    margin-left: -40px;
+}
+
+.question {
     background-color: rgba(221, 221, 221, 255);
-    border-radius: 1rem;
     padding: 1rem;
-    width: 70%;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 20px;
+    padding-bottom: 50px;
+}
+
+.questionContent {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+
+.description {
+    text-align: center;
 }
 
 .votes {
@@ -40,6 +62,14 @@ input {
 
 .votesIcons {
     width: 50px;
+}
+.votesIcons:hover{
+    opacity: 50%;
+}
+h4 {
+    text-align: center;
+    background-color: rgba(221, 221, 221, 255);
+    /* margin-bottom: 10px;. */
 }
 
 .answersDiv {
@@ -62,7 +92,6 @@ input {
     gap: 20px;
 }
 
-
 .answerContent {
     width: 800px;
     display: flex;
@@ -71,6 +100,14 @@ input {
     align-items: center;
     gap: 2rem;
 }
+
+.viewComment {
+    display: flex;
+    gap: 20px;
+    width: 100%;
+    justify-content: center;
+}
+
 button {
     color: white;
     background-color: rgba(110, 110, 238, 255);
@@ -83,4 +120,20 @@ button {
 button:hover {
     background-color: black;
 
+}
+
+.submitAnswers {
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    gap: 10px;
+}
+
+
+textarea {
+    height: 250px;
+}
+
+.submitAnswerBtn {
+    width: 20%;
 }
