--- a/Frontend/src/app/components/user/user-profile/user-profile.component.html
+++ b/Frontend/src/app/components/user/user-profile/user-profile.component.html
@@ -1,1 +1,115 @@
-<p>user-profile works!</p>
+<app-header></app-header>
+<!-- <h3> Welcome To Your Profile Michelle</h3> -->
+<div class="mainContent">
+    <div class="userProfile">
+        <div class="personalDetails">
+            <img class="userImg" src="../../../../assets/images/MichelleObama.jpg">
+            <p>Michelle Obama</p>
+            <p>michelleobama@gmail.com</p>
+        </div>
+
+        <div class="analytics">
+            <h4>ANALYTICS</h4>
+            <div class="totalQuestions">
+                <!-- <img class="analyticsIcons" src="../../../../assets/icons/question.png"> -->
+                <div class="analyticsText">10 Total Questions</div>
+            </div>
+            <div class="totalComments">
+                <!-- <img class="analyticsIcons" src="../../../../assets/icons/question.png"> -->
+                <div class="analyticsText">20 Total Comments</div>
+
+            </div>
+            <div class="totalAnswers">
+                <!-- <img class="analyticsIcons" src="../../../../assets/icons/question.png"> -->
+                <div class="analyticsText">20 Total Comments</div>
+            </div>
+
+        </div>
+
+    </div>
+    <div class="allQuestionsDiv">
+        <div class="mostRecent">
+            <h3>Your Most Recent Question</h3>
+        </div>
+
+        <div class="question">
+            <div class="votes">
+                <img class="votesIcons" src="../../../../assets/icons/thumb-up.png" title="Upvote this Question">
+                <p>50</p>
+                <img class="votesIcons" src="../../../../assets/icons/thumb-down.png" title="Downvote this Question">
+            </div>
+            <div class="questionContent">
+                <div class="title">
+                    <h3> How Do I undo the most recent commits in git</h3>
+                </div>
+                <div class="description">
+                    How Do I undo the most recent commits in git
+                </div>
+                <div class="viewQuestion">
+                    <h5>10 answers</h5>
+                    <button routerLink="/question">VIEW QUESTION</button>
+                    <div class="iconsClass">
+                        <img class="icons" src="../../../../assets/icons/edit.png" title="Edit this Question">
+                        <img class="icons" src="../../../../assets/icons/delete.png" title="Delete this Question">
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="mostRecent">
+            <h3>Your Most Popular Question</h3>
+        </div>
+        <div class="question">
+            <div class="votes">
+                <img class="votesIcons" src="../../../../assets/icons/thumb-up.png" title="Upvote this Question">
+                <p>50</p>
+                <img class="votesIcons" src="../../../../assets/icons/thumb-down.png" title="Downvote this Question">
+            </div>
+            <div class="questionContent">
+                <div class="title">
+                    <h3> How Do I undo the most recent commits in git</h3>
+                </div>
+                <div class="description">
+                    How Do I undo the most recent commits in git
+                </div>
+                <div class="viewQuestion">
+                    <h5>10 answers</h5>
+                    <button routerLink="/question">VIEW QUESTION</button>
+                    <div class="iconsClass">
+                        <img class="icons" src="../../../../assets/icons/edit.png" title="Edit this Question">
+                        <img class="icons" src="../../../../assets/icons/delete.png" title="Delete this Question">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="mostRecent">
+            <h3>All of Your Questions</h3>
+        </div>
+        <div class="question">
+            <div class="votes">
+                <img class="votesIcons" src="../../../../assets/icons/thumb-up.png" title="Upvote this Question">
+                <p>50</p>
+                <img class="votesIcons" src="../../../../assets/icons/thumb-down.png" title="Downvote this Question">
+            </div>
+            <div class="questionContent">
+                <div class="title">
+                    <h3> How Do I undo the most recent commits in git</h3>
+                </div>
+                <div class="description">
+                    How Do I undo the most recent commits in git
+                </div>
+                <div class="viewQuestion">
+                    <h5>10 answers</h5>
+                    <button routerLink="/question">VIEW QUESTION</button>
+                    <div class="iconsClass">
+                        <img class="icons" src="../../../../assets/icons/edit.png" title="Edit this Question">
+                        <img class="icons" src="../../../../assets/icons/delete.png" title="Delete this Question">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
+</div>
