--- a/Frontend/src/app/components/user/login/login.component.html
+++ b/Frontend/src/app/components/user/login/login.component.html
@@ -22,7 +22,7 @@
                             Email</span>
                         <span class="error" *ngIf="form.get('email')!.errors!['email']">Please Enter a Valid
                             Email</span>
-                    </span>8
+                    </span>
                 </div>
 
                 <div class="form-group">
