--- a/Frontend/src/app/components/user/single-question/single-question.component.html
+++ b/Frontend/src/app/components/user/single-question/single-question.component.html
@@ -50,8 +50,8 @@
                 <button routerLink="/question">COMMENT</button>
             </div>
             <div class="comments">
-                <p>Comment 1</p>
-                <p>Comment 2</p>
+                <!-- <p>Comment 1</p>
+                <p>Comment 2</p> -->
 
             </div>
         </div>
@@ -75,8 +75,8 @@
                 <button routerLink="/question">COMMENT</button>
             </div>
             <div class="comments">
-                <p>Comment 1</p>
-                <p>Comment 2</p>
+                <!-- <p>Comment 1</p>
+                <p>Comment 2</p> -->
 
             </div>
         </div>
