Updates on State and Components

--- a/Frontend/src/app/components/page-not-found/page-not-found.component.css
+++ b/Frontend/src/app/components/page-not-found/page-not-found.component.css
@@ -10,11 +10,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /* background-image: url('../../../assets/images/sadness.jpg');
-    background-repeat: repeat;
-    background-size: cover;
-    background-position: center; */
-      
+    /* background-image: url('../../../assets/images/sadness.jpg');*/
+
 
 }
 
