--- a/Frontend/src/app/components/user/single-question/single-question.component.html
+++ b/Frontend/src/app/components/user/single-question/single-question.component.html
@@ -1,15 +1,19 @@
 <app-header></app-header>
-<div class="brandDiv">
-    <div class="brand">
-        <h1>THE ANSWER HUB</h1>
-    </div>
-    <p>Where Your Curiosity Meets Solutions</p>
-    <div class="searchdiv">
-        <input placeholder="Search Answers Here">
-        <img class="searchIcon" src="../../../../assets/icons/search.png">
+<div class="topmain">
+    <div class="brandDiv">
+        <div class="brand">
+            <h1>THE ANSWER HUB</h1>
+        </div>
+        <p>Where Your Curiosity Meets Solutions</p>
+        <div class="searchDiv">
+            <input class="searchInput" placeholder="Search Questions Here">
+            <img class="searchIcon" src="../../../../assets/icons/search.png">
+        </div>
+
     </div>
 
 </div>
+
 <h4>QUESTION</h4>
 <div class="question">
     <div class="votes">
