--- a/Frontend/src/app/components/user/homepage/homepage.component.css
+++ b/Frontend/src/app/components/user/homepage/homepage.component.css
@@ -173,7 +173,7 @@ h5:hover {
 
     .searchInput {
         padding: 10px;
-        width: 400px;
+        width: 300px;
     }
 
     .searchIcon {
@@ -185,6 +185,7 @@ h5:hover {
         justify-content: space-around;
         margin-top: 3rem;
         gap: 20px;
+
     }
 
     .ask {
@@ -199,7 +200,10 @@ h5:hover {
 
     .topask {
         width: 100%;
+        margin-top: 4rem;
         margin-bottom: 1rem;
+        height: 220px;
+        text-align: center;
 
     }
 
@@ -272,6 +276,8 @@ h5:hover {
         justify-content: space-around;
         margin-top: 3rem;
         gap: 20px;
+        /* background-color: red; */
+
     }
 
     .ask {
