--- a/Frontend/src/app/components/user/question/question.component.html
+++ b/Frontend/src/app/components/user/question/question.component.html
@@ -1,13 +1,11 @@
-<div *ngIf="(isLoading$ | async)">
+<!-- <div *ngIf="(isLoading$ | async)">
   Loading questions...
 </div>
 <div *ngIf="(error$ | async)">
   Error: {{ error$ | async }}
 </div>
-<!-- <app-ask-question (questionAdded)="onAddQuestion($event)"></app-ask-question> -->
+<app-ask-question (questionAdded)="onAddQuestion(questions)"></app-ask-question>
 
-<!-- <app-question-list
-    [questions]="questions$ | async"
-    (questionUpdated)="onUpdateQuestion($event)"
-    (questionDeleted)="onDeleteQuestion($event)"
-  ></app-question-list> -->
+<app-question-list [questions]="questions$ | async" (questionUpdated)="onUpdateQuestion($event)"
+  (questionDeleted)="onDeleteQuestion($event)"></app-question-list>
+ -->
