--- a/Frontend/src/app/components/user/single-question/single-question.component.css
+++ b/Frontend/src/app/components/user/single-question/single-question.component.css
@@ -1,213 +1,261 @@
 * {
-    margin: 0px;
-    padding: 0px;
-}
-
-input {
-    width: 100%;
-    height: 40px;
+  margin: 0px;
+  padding: 0px;
 }
 
 .brandDiv {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    color: white;
-    background-color: rgba(110, 110, 238, 255);
-    /* padding:50px; */
-    padding-top: 30px;
-    padding-bottom: 70px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  color: white;
+  background-color: rgba(110, 110, 238, 255);
 
 }
 
 .brand {
-    margin-top: 50px;
+  margin-top: 50px;
+}
+
+.searchInput {
+  padding: 20px;
 }
 
 .searchIcon {
-    width: 30px;
-    margin-left: -40px;
+  width: 30px;
+  margin-left: -40px;
+}
+
+.searchDiv {
+  width: 600px;
+}
+
+input {
+  /* width: 600px; */
+  height: 40px;
 }
 
 .question {
-    background-color: rgba(221, 221, 221, 255);
-    padding: 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-    padding-bottom: 50px;
+  background-color: rgba(221, 221, 221, 255);
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  padding-bottom: 50px;
 }
 
 .questionContent {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
 }
 
 .description {
-    text-align: center;
+  text-align: center;
 }
 
 .votes {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 .votesIcons {
-    width: 50px;
+  width: 50px;
 }
 
 .votesIcons:hover {
-    opacity: 50%;
+  opacity: 50%;
 }
 
 h4 {
-    text-align: center;
-    background-color: rgba(221, 221, 221, 255);
-    /* margin-bottom: 10px;. */
+  text-align: center;
+  background-color: rgba(221, 221, 221, 255);
+  /* margin-bottom: 10px;. */
 }
 
 .answersDiv {
-    background-color: rgba(221, 221, 221, 255);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 50px;
-    padding-bottom: 100px;
+  background-color: rgba(221, 221, 221, 255);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  padding-bottom: 100px;
 }
 
 .answer {
-    background-color: white;
-    border-radius: 1rem;
-    padding: 1rem;
-    width: 70%;
-    display: flex;
-    align-items: center;
-    gap: 20px;
+  background-color: white;
+  border-radius: 1rem;
+  padding: 1rem;
+  width: 70%;
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
 
 .answerContent {
-    width: 800px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
+  width: 800px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
 }
 
 .viewComment {
-    display: flex;
-    gap: 20px;
-    width: 100%;
-    justify-content: center;
+  display: flex;
+  gap: 20px;
+  width: 100%;
+  justify-content: center;
 }
 
 button {
-    color: white;
-    background-color: rgba(110, 110, 238, 255);
-    padding: 0.5rem;
-    border: transparent;
-    border-radius: 0.5rem;
-    text-align: center;
+  color: white;
+  background-color: rgba(110, 110, 238, 255);
+  padding: 0.5rem;
+  border: transparent;
+  border-radius: 0.5rem;
+  text-align: center;
 }
 
 button:hover {
-    background-color: black;
+  background-color: black;
 
 }
 
 .submitAnswers {
-    display: flex;
-    flex-direction: column;
-    width: 70%;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  gap: 10px;
 }
 
 textarea {
-    height: 250px;
+  height: 250px;
 }
 
 .submitAnswerBtn {
-    width: 20%;
+  width: 20%;
 }
 
 /* Medium devices (tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-    input {
-      width: 100%;
-    }
-    .brandDiv {
-      padding-top: 60px;
-      padding-bottom: 80px;
-    }
-    .question {
-      padding-bottom: 60px;
-    }
-    .answersDiv {
-      gap: 70px;
-      padding-bottom: 120px;
-    }
-    .answer {
-      width: 90%;
-    }
-    .submitAnswers {
-      width: 90%;
-    }
+  input {
+    width: 100%;
   }
-  
-  /* Large devices (laptops/desktops, 992px and up) */
-  @media only screen and (min-width: 992px) {
-    input {
-      width: 100%;
-    }
-    .brandDiv {
-      padding-top: 80px;
-      padding-bottom: 100px;
-    }
-    .question {
-      padding-bottom: 70px;
-    }
-    .answersDiv {
-      gap: 80px;
-      padding-bottom: 140px;
-    }
-    .answer {
-      width: 80%;
-    }
-    .submitAnswers {
-      width: 80%;
-    }
+
+  .brandDiv {
+    padding-top: 60px;
+    padding-bottom: 80px;
   }
-  
-  /* Extra large devices (large laptops and desktops, 1200px and up) */
-  @media only screen and (min-width: 1200px) {
-    input {
-      width: 100%;
-    }
-    .brandDiv {
-      padding-top: 100px;
-      padding-bottom: 120px;
-    }
-    .question {
-      padding-bottom: 80px;
-    }
-    .answersDiv {
-      gap: 90px;
-      padding-bottom: 160px;
-    }
-    .answer {
-      width: 70%;
-    }
-    .submitAnswers {
-      width: 70%;
-    }
+
+  .question {
+    padding-bottom: 60px;
   }
-  
+
+  .answersDiv {
+    gap: 70px;
+    padding-bottom: 120px;
+  }
+
+  .answer {
+    width: 90%;
+  }
+
+  .submitAnswers {
+    width: 90%;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  input {
+    width: 100%;
+  }
+
+  .brandDiv {
+    padding-top: 80px;
+    padding-bottom: 100px;
+  }
+
+  .question {
+    padding-bottom: 70px;
+  }
+
+  .answersDiv {
+    gap: 80px;
+    padding-bottom: 140px;
+  }
+
+  .answer {
+    width: 80%;
+  }
+
+  .submitAnswers {
+    width: 80%;
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  input {
+    width: 100%;
+  }
+
+  .brandDiv {
+    padding-top: 100px;
+    padding-bottom: 120px;
+  }
+
+  .question {
+    padding-bottom: 80px;
+  }
+
+  .answersDiv {
+    gap: 90px;
+    padding-bottom: 160px;
+  }
+
+  .answer {
+    width: 70%;
+  }
+
+  .submitAnswers {
+    width: 70%;
+  }
+}
+
+@media only screen and (max-width: 617px) {
+  input {
+    width: 100%;
+  }
+
+  .brandDiv {
+    padding-top: 60px;
+    padding-bottom: 80px;
+    width: 100%;
+  }
+
+  .question {
+    padding-bottom: 60px;
+  }
+
+  .answersDiv {
+    gap: 70px;
+    padding-bottom: 120px;
+  }
+
+  .answer {
+    width: 90%;
+  }
+
+  .submitAnswers {
+    width: 90%;
+  }
+}
