--- a/Frontend/src/app/components/user/homepage/homepage.component.html
+++ b/Frontend/src/app/components/user/homepage/homepage.component.html
@@ -52,8 +52,14 @@
                 asperiores!
             </div>
             <div class="viewQuestion">
-                <h5>10 answers</h5>
-                <button routerLink="/question">VIEW QUESTION</button>
+                <details>
+                    <summary class="summary"><b>10 answers</b></summary>
+                    <p>This is the first answer here.</p>
+                    <p>This is the second answer here.</p>
+                    <p>This is the third answer here.</p>
+                    <p>This is the fourth answer here.</p>
+                </details>
+                <button routerLink="/viewquestion">VIEW QUESTION</button>
             </div>
         </div>
     </div>
@@ -75,8 +81,15 @@
                 nostrum nisi. Rerum.
             </div>
             <div class="viewQuestion">
-                <h5>10 answers</h5>
-                <button routerLink="/question">VIEW QUESTION</button>
+                <details>
+                    <summary class="summary"><b>10 answers</b></summary>
+                    <p>This is the first answer here.</p>
+                    <p>This is the second answer here.</p>
+                    <p>This is the third answer here.</p>
+                    <p>This is the fourth answer here.</p>
+                </details>
+
+                <button routerLink="/viewquestion">VIEW QUESTION</button>
             </div>
         </div>
     </div>
