--- a/Frontend/src/app/components/user/header/header.component.html
+++ b/Frontend/src/app/components/user/header/header.component.html
@@ -4,13 +4,18 @@
     </div>
     <div class="links">
         <a routerLink="">HOME</a>
+        <a *ngIf="auth.isLoggedIn" routerLink="/aboutus">ABOUT US</a>
+        <a *ngIf="auth.isLoggedIn" routerLink="/news">NEWS FEED</a>
         <a *ngIf="!auth.isLoggedIn" routerLink="/login">LOGIN</a>
         <a *ngIf="!auth.isLoggedIn" routerLink="/register">REGISTER</a>
+
     </div>
 
     <div class="buttons">
         <button *ngIf="auth.isLoggedIn" routerLink="/askquestion">ASK A QUESTION</button>
         <button *ngIf="!auth.isLoggedIn" routerLink="/login">SIGN IN</button>
+        <button *ngIf="auth.isLoggedIn" routerLink="/profile">PROFILE</button>
+        <button *ngIf="auth.isLoggedIn" (click)="auth.logout()" >LOG OUT</button>
     </div>
 
 </div>
