--- a/Frontend/src/app/components/user/question-list/question-list.component.html
+++ b/Frontend/src/app/components/user/question-list/question-list.component.html
@@ -1,5 +1,5 @@
 <div *ngFor="let question of questions$ | async">
   <h2>{{ question.title }}</h2>
   <p>{{ question.description }}</p>
-  <p>Tags: {{ question.tags }}</p>
+  <p>Tags: {{ question.tagName }}</p>
 </div>
