--- a/Frontend/src/app/components/admin/question-details/question-details.component.html
+++ b/Frontend/src/app/components/admin/question-details/question-details.component.html
@@ -1,1 +1,30 @@
-<p>question-details works!</p>
+<div class="container">
+
+  <div class="sidebar">
+    <app-side-bar></app-side-bar>
+  </div>
+
+
+  <div class="content">
+    <h5>Question Information:</h5>
+    <div class="table-container">
+      <table>
+        <!-- <th>User ID</th> -->
+        <th>Question ID</th>
+        <th>Title</th>
+        <th>Description</th>
+        <th>Vote Count</th>
+
+        <tr *ngFor="let question of allQuestions">
+          <td>{{ question.questionID }}</td>
+          <td>{{ question.title }}</td>
+          <td>{{ question.description }}</td>
+          <!-- <td>{{ question.voteCount}}</td> -->
+          <!-- <td>{{ user.username }}</td> -->
+          <td class="td-btn"><button>DISABLE</button></td>
+        </tr>
+
+      </table>
+    </div>
+  </div>
+</div>
