--- a/Frontend/src/app/components/admin/user-details/user-details.component.html
+++ b/Frontend/src/app/components/admin/user-details/user-details.component.html
@@ -1,1 +1,28 @@
-<p>user-details works!</p>
+<div class="container">
+
+  <div class="sidebar">
+    <app-side-bar></app-side-bar>
+  </div>
+
+
+  <div class="content">
+    <h5>User Information:</h5>
+    <div class="table-container">
+      <table>
+        <th>User ID</th>
+        <th>Full Name</th>
+        <th>Email</th>
+        <th>Username</th>
+
+        <tr *ngFor="let user of users">
+          <td>{{ user.userID }}</td>
+          <td>{{ user.fullname }}</td>
+          <td>{{ user.email }}</td>
+          <td>{{ user.username }}</td>
+          <!-- <td class="td-btn"><button (click)="disable(user.userID)">DISABLE</button></td> -->
+        </tr>
+
+      </table>
+    </div>
+  </div>
+</div>
