--- a/Frontend/src/app/components/user/login/login.component.html
+++ b/Frontend/src/app/components/user/login/login.component.html
@@ -12,7 +12,7 @@
 
             </div>
 
-            <form class="form" [formGroup]="form" (ngSubmit)="submitData()">
+            <form class="form" [formGroup]="form" (ngSubmit)="submitData(form)">
 
                 <div class="form-group">
                     <label for="email">E-mail</label>
